<?xml version="1.0" encoding="utf-8"?>
<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">颜语</string>

    <string name="activity_comment_list" >评论</string>
    <string name="activity_order_coupon">优惠折扣</string>
    <string name="build_order">提交订单</string>
    <string name="activity_build_order">@string/build_order</string>

    <string name="detail">详情</string>
    <string name="more">更多</string>
    <string name="share_dialog_title">分享到</string>

    <string name="price">￥ %1$d</string>
    <string name="ren_ming_bi">¥</string>
    <string name="han_yuan">￦</string>
    <string name="discount_money">已优惠￥%1$d</string>

    <string name="fragment_home">首页</string>
    <string name="fragment_mall">分类</string>
    <string name="fragment_merchant">机构</string>
    <string name="fragment_shares">圈子</string>
    <string name="fragment_user">个人中心</string>

    <string name="home_item_recommend_area">推荐地区</string>

    <string name="indicator_recommend_shares">精华</string>
    <string name="indicator_user_shares">广场</string>
    <string name="indicator_area_goods">精选项目</string>
    <string name="indicator_area_merchant">优质机构</string>

    <string name="title_goods_topic">产品专题</string>
    <string name="title_merchant_topic">机构专题</string>
    <string name="activity_area_list">城市</string>

    <!-- 用户 -->
    <string name="commit">提交</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="check_coupon">兑换</string>
    <string name="pay">立即付款</string>
    <string name="preserve">立即预约</string>
    <string name="consult_online">联系在线客服</string>
    <string name="view_order">查看我的订单</string>
    <string name="view_main_page">去首页看看</string>
    <string name="payment_success">支付成功</string>
    <string name="preserve_success">预约成功</string>
    <string name="info_payment_suggestion">请提前预约\n让我们精心为您服务</string>
    <string name="info_preserve_result">您预约的日期为%1$s</string>
    <string name="waring_reset_preserve">如需修改日期，请联系客服</string>

    <string name="user_order">我的订单</string>
    <string name="user_coupon">我的优惠券</string>
    <string name="user_message">我的消息</string>
    <string name="user_collection">我的收藏</string>    
    <string name="user_history">浏览历史</string>       
    <string name="user_feedback">意见反馈</string>    
    <string name="user_about">关于我们</string>        
    
    <string name="please_input_your_mobile">请输入您的手机号码</string>
    <string name="please_input_your_password">请输入密码</string>
    <string name="please_input_your_verification_code">请输入验证码</string>
	<string name="get_verification_code">获取验证码</string>    

    <string name="forget_password"><u>忘记密码?</u></string>
    
    <string name="order_code">订单号:%1$s</string>
    
    <string name="order_details">订单详情</string>
    <string name="warning_build_order_fail">生成订单失败！</string>
    <string name="warning_message_delete_order">亲，你确定要取消吗？</string>
    <string name="not_delete_order">不取消了</string>
    <string name="error_delete_order">订单取消失败</string>
    <string name="warning_message_cancel_order">亲，你确定要退款吗？</string>
    <string name="not_cancel_order">不退款了</string>
    <string name="error_cancel_order">申请退款失败</string>
    
    <string name="preference_user_name_hint">请输入姓名</string>
    <string name="preference_mobile_hint">请输入电话</string>
    <string name="preference_passport_hint">请输入护照号</string>
    
    <string name="pay_type">选择付款方式</string>  
    
    <string name="pay_weixin">微信支付</string>  
    
    <string name="pay_weixin_safety">微信安全支付</string>  
    
    
    <string name="pay_zhifubao">支付宝支付</string>  
    
    <string name="pay_zhifubao_safety">支付宝账号安全支付</string>      
    
    
    <string name="feedback_suggestions_txt">我们真诚的感谢您为我们提出宝贵的建议...</string>      
    
    <string name="feedback_txt">请填写您的手机号或者邮箱（选填）</string>      
       
    <string name="submit">提交</string>        

    <string name="num_views">%1$d次浏览</string>

    <string name="merchant_rate_service">服务%1$d</string>
    <string name="merchant_rate_effect">效果%1$d</string>
    <string name="merchant_rate_environment">环境%1$d</string>

    <string name="area_goods_count">%1$s个项目</string>
    <string name="area_merchant_count">%1$s个机构</string>
    <string name="area_special">擅长项目：</string>

    <string name="coupon">优惠券</string>
    <string name="coupon_code">优惠码</string>
    <string name="coupon_life">%1$s - %2$s</string>
    <string name="coupon_term">满%1$s减%2$s</string>
    <string name="coupon_status_enabled">待使用</string>
    <string name="coupon_status_not_begin">即将可用</string>
    <string name="coupon_status_used">已使用</string>
    <string name="coupon_status_expired">已过期</string>

    <string name="share_comment_hint" tools:ignore="MissingTranslation">请输入</string>
    <string name="share_subcomment_hint" tools:ignore="MissingTranslation">"回复 %1$s"</string>
    <string name="new_post_hint" tools:ignore="MissingTranslation">输入你想说的话...</string>
    <string name="title_activity_post" tools:ignore="MissingTranslation">发帖</string>
    
    <string name="warning_field_empty" tools:ignore="MissingTranslation">%1$s不能为空！</string>
    <string name="warning_network_unavailable" translatable="false">网络不给力呢～</string>
    <string name="error_upload_file" tools:ignore="MissingTranslation">文件上传失败!</string>
    <string name="user_share_content_label" tools:ignore="MissingTranslation">美丽圈内容</string>

    <string name="title_wechat_share">微信好友</string>
    <string name="title_wechat_moment">朋友圈</string>
    <string name="title_qq_share">QQ好友</string>
    <string name="title_qzone_share">QQ空间</string>
    <string name="title_sina_weibo">新浪微博</string>

    <!-- 商城 -->
	<string name="mall_item_nam_1">肉毒素除皱</string>    
	<string name="mall_item_nam_2">填充朔形</string>   
	<string name="mall_item_nam_3">紧肤提升</string>  
	<string name="mall_item_nam_4">肉毒素美形</string>  
	<string name="mall_item_nam_5">填充凹形</string>  
	<string name="mall_item_nam_6">激光美肤</string>  
	<string name="mall_item_nam_7">韩国特色美容</string>  
	<string name="mall_item_nam_8">激光除毛</string>  
	<string name="mall_item_nam_9">体形雕塑</string>  
    
    
    	<string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="all" tools:ignore="MissingTranslation">全部</string>

    <string name="rss_list_time_text_hour" translatable="false">小时前</string>
    <string name="rss_list_time_text_min" translatable="false" tools:ignore="MissingTranslation">分钟前</string>
    <string name="rss_list_time_text_sec" translatable="false">秒前</string>
    <string name="rss_list_time_text_just" tools:ignore="MissingTranslation,MissingTranslation">刚刚</string>
    <string name="date_fromate_anecdote" translatable="false">"yyyy-MM-dd"</string>
    
    
    <!-- 分享相关 -->
    <string name="share_project_txt">"我发现一个迅速变美的项目"</string>
    <string name="share_institution_txt">"我发现一个高端专业的医院"</string>
    <string name="share_action_txt">"我发现一个迅速变美的项目"</string>
    <string name="share_circles_txt">"我发现一个迅速变美的项目"</string>
    <string name="share_default_txt">"下载颜语app,马上做女神"</string>
    
    <item type="id" name="tag_first"></item>
    <item type="id" name="tag_second"></item>
    <item type="id" name="tag_third"></item>
</resources>
