<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/color_gray">

   <!-- title bar -->
    <include android:id="@+id/title_bar_layout"  layout="@layout/title_bar_layout"/> 
    
    <LinearLayout
        android:id="@+id/register_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical"
        android:visibility="gone">
        <EditText 
         android:id="@+id/register_user_mobile"   
         android:layout_width="match_parent"            
         android:layout_height="wrap_content"     
         android:hint="@string/please_input_your_mobile"
         android:gravity="center_vertical"/>
        <EditText 
         android:id="@+id/register_user_verification"   
         android:layout_width="match_parent"            
         android:layout_height="wrap_content"     
         android:hint="@string/please_input_your_verification_code"
         android:gravity="center_vertical"/>
        <EditText 
         android:id="@+id/register_user_password"   
         android:layout_width="match_parent"            
         android:layout_height="wrap_content"     
         android:hint="@string/please_input_your_password"
         android:gravity="center_vertical"/>
    </LinearLayout>   
 
    <!-- 登录 按钮 -->
    <Button 
        android:id="@+id/launch"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/login"/>

</RelativeLayout>