<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:textColor="#7bdeb4"
        android:textSize="16sp"
        android:text="@string/info_payment_suggestion" />

    <Button
        android:id="@+id/preserve"
        style="@style/Widget.Button.Single"
        android:layout_marginTop="48dp"
        android:background="@drawable/single_button_bg_green"
        android:textColor="#52ce99"
        android:text="@string/preserve" />

    <Button
        android:id="@+id/consult_online"
        style="@style/Widget.Button.Single"
        android:layout_marginTop="14dp"
        android:text="@string/consult_online" />
</LinearLayout>