<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/color_background">
    
    <include layout="@layout/title_bar_layout"/>
    
    <EditText 
        android:id="@+id/txt_content"
	    android:layout_width="match_parent"        
	    android:layout_height="150dp"
        android:textColorHint="#b4b4b4"
        android:textColor="#333333"
	    android:textSize="14sp"
	    android:background="@drawable/icon_feedback"
	    android:layout_marginTop="18dp"
	    android:layout_marginLeft="@dimen/item_margin_normal"
	    android:layout_marginRight="@dimen/item_margin_normal"
	    android:hint="@string/feedback_suggestions_txt"
	    android:gravity="left|top"
	    android:paddingLeft="14dp"
	    android:paddingTop="16dp"
	    android:paddingBottom="16dp"
	    android:paddingRight="14dp"/>
    
    <EditText 
        android:id="@+id/mobile"
        android:gravity="left|top"
        android:textSize="14sp"
        android:textColorHint="#b4b4b4"
        android:textColor="#333333"
        android:layout_marginTop="@dimen/item_margin_small"
        android:layout_width="match_parent"        
        android:layout_height="50dp"
        android:hint="@string/feedback_txt"
        android:background="@color/color_white"
        android:padding="10dp"/>
    
    <Button 
        android:id="@+id/submit"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="@dimen/item_margin_normal"
        android:background="@drawable/user_login_button_selector"
        android:layout_marginRight="@dimen/item_margin_normal"
        android:layout_width="match_parent"        
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/submit"/>
    
    
</LinearLayout>
