<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/color_gray">
    
    <include layout="@layout/title_bar_layout"/>
        
    <include android:id="@+id/item1" layout="@layout/item_user_order_details_layout"/>
    
    <include android:id="@+id/item2" layout="@layout/item_user_order_details_layout"/>
    
    <include android:id="@+id/item3" layout="@layout/item_user_order_details_layout"/>
    
    <include android:id="@+id/item4" layout="@layout/item_user_order_details_layout"/>
    
    <include android:id="@+id/item5" layout="@layout/item_user_order_details_layout"/>
    
    <include android:id="@+id/item6" layout="@layout/item_user_order_details_layout"/>
   
    
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/color_gray">
    <TextView 
        android:layout_margin="10dp"
        android:id="@+id/title"
        android:layout_alignParentLeft="true"
        android:text="@string/pay_type"
        android:layout_centerVertical="true"
    	android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    
    <View 
        android:layout_alignParentBottom="true"
        android:background="@color/color_gray"
    	android:layout_height="1px"        
        android:layout_width="match_parent"/>
</RelativeLayout>
    
	<LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical" 
       android:background="@color/color_white">
    <!-- 微信支付 -->
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:padding="10dp">
	        <ImageView 
	        android:id="@+id/pay_icon_weixin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 	            
	        android:src="@drawable/share_weixin_contact_icon"/>
			<TextView 
			    android:layout_marginLeft="5dp"
			    android:layout_toRightOf="@id/pay_icon_weixin"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/pay_weixin"/>	        
			<TextView 
			    android:layout_marginLeft="5dp"
			    android:layout_toRightOf="@id/pay_icon_weixin"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignBottom="@id/pay_icon_weixin"
			    android:text="@string/pay_weixin_safety"/>
	        <ImageView 
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" 	            
		        android:src="@drawable/next_icon"/>
	    </RelativeLayout>
		    
	    <View 
	        android:background="@color/color_gray"
	    	android:layout_height="1px"        
	        android:layout_width="match_parent"/>
		    
	        <!-- 支付宝支付 -->
	    
	      <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:padding="10dp">
	        <ImageView 
	        android:id="@+id/pay_icon_zhifubao"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 	            
	        android:src="@drawable/share_weixin_moment_icon"/>
			<TextView 
			    android:layout_marginLeft="5dp"
			    android:layout_toRightOf="@id/pay_icon_zhifubao"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/pay_zhifubao"/>	        
			<TextView 
			    android:layout_marginLeft="5dp"
			    android:layout_toRightOf="@id/pay_icon_zhifubao"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignBottom="@id/pay_icon_zhifubao"
			    android:text="@string/pay_zhifubao_safety"/>
	        <ImageView 
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" 	            
		        android:src="@drawable/next_icon"/>
	    </RelativeLayout>
	    
	</LinearLayout>

</LinearLayout>
