<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/color_gray">
    <!--    
     android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
     -->

   <!-- title bar -->
    <include android:id="@+id/title_bar_layout"  layout="@layout/title_bar_login_register_layout"/> 
    

    <FrameLayout 
        android:id="@+id/root"
        android:layout_below="@id/title_bar_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
	            <!--  登录 -->
			    <LinearLayout
			        android:id="@+id/login_input_layout"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" 
			        android:orientation="vertical">
			        <EditText 
			         android:id="@+id/login_user_mobile"   
			         android:layout_width="match_parent"            
			         android:layout_height="wrap_content"     
			         android:hint="@string/please_input_your_mobile"
			         android:gravity="center_vertical"/>
			        <EditText 
			         android:id="@+id/login_user_password"   
			         android:layout_width="match_parent"            
			         android:layout_height="wrap_content"     
			         android:hint="@string/please_input_your_password"
			         android:gravity="center_vertical"/>
			    </LinearLayout>
			    
			    <!--  注册 -->
			    <LinearLayout
			        android:id="@+id/register_input_layout"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content" 
			        android:orientation="vertical"
			        android:visibility="gone">
			        <EditText 
			         android:id="@+id/register_user_mobile"   
			         android:layout_width="match_parent"            
			         android:layout_height="wrap_content"     
			         android:hint="@string/please_input_your_mobile"
			         android:gravity="center_vertical"/>
			        <EditText 
			         android:id="@+id/register_user_verification"   
			         android:layout_width="match_parent"            
			         android:layout_height="wrap_content"     
			         android:hint="@string/please_input_your_verification_code"
			         android:gravity="center_vertical"/>
			        <EditText 
			         android:id="@+id/register_user_password"   
			         android:layout_width="match_parent"            
			         android:layout_height="wrap_content"     
			         android:hint="@string/please_input_your_password"
			         android:gravity="center_vertical"/>
			    </LinearLayout>   
    </FrameLayout>
    <TextView 
        android:id="@+id/forget_password"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@id/root"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/forget_password"/>
    
    <!-- 登录 按钮 -->
    <Button 
        android:id="@+id/launch"
        android:layout_below="@id/forget_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/login"/>

    <!--  SNS  -->
    <RelativeLayout 
        android:layout_below="@id/launch"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <Button 
            android:id="@+id/qq"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button 
            android:id="@+id/weixin"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button 
            android:id="@+id/sina_weibo"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />                
    </RelativeLayout>
</RelativeLayout>
